--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.1.10",
+		"daisyui": "^5.0.43",
 		"preact": "^10.25.3",
-		"preact-iso": "^2.9.2"
+		"preact-iso": "^2.9.2",
+		"tailwindcss": "^4.1.10"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.9.3",
