--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"eslint": "^9.29.0",
 		"eslint-config-preact": "^1.5.0",
 		"typescript": "^5.8.3",
-		"vite": "^6.0.4"
+		"vite": "^6.0.4",
+		"vitest": "^3.2.4"
 	},
 	"eslintConfig": {
 		"extends": "preact"
