Feature/cursor rules (#7)
* project rules

* testing rules

* vitest installed

* vite config

* improved testing-rules

--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.1.10",
-		"daisyui": "^5.0.43",
-		"preact": "^10.25.3",
-		"preact-iso": "^2.9.2",
-		"tailwindcss": "^4.1.10"
-	},
-	"devDependencies": {
-		"@preact/preset-vite": "^2.9.3",
-		"eslint": "^9.29.0",
-		"eslint-config-preact": "^1.5.0",
-		"typescript": "^5.8.3",
-		"vite": "^6.0.4"
-	},
-	"eslintConfig": {
-		"extends": "preact"
-	}
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
+    "daisyui": "^5.0.43",
+    "preact": "^10.25.3",
+    "preact-iso": "^2.9.2",
+    "tailwindcss": "^4.1.10"
+  },
+  "devDependencies": {
+    "@preact/preset-vite": "^2.9.3",
+    "@testing-library/preact": "^3.2.4",
+    "eslint": "^9.29.0",
+    "eslint-config-preact": "^1.5.0",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.0.4",
+    "vitest": "^3.2.4"
+  },
+  "eslintConfig": {
+    "extends": "preact"
+  }
 }
